--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -21,11 +21,8 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Run this script accessing secrets
+        FIRSTNAME: ${{ secrets.FIRSTNAME}}
+        run: echo secrets are added in env 
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project to dev environment
+      
