--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -19,10 +19,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+      
 
       # Runs a single command using the runners shell
       - name: Run this script accessing secrets
-        FIRSTNAME: ${{ secrets.FIRSTNAME}}
+        id: ${{ secrets.FIRST_NAME}}
         run: echo secrets are added in env 
 
       
