--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,17 +13,17 @@ on:
 jobs:
   deployment:
     runs-on: ubuntu-latest
-    environment: Dev
-    
-        # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-      
+         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4   
+      - name: My first action
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FIRSTNAME: ${{ secrets.FIRSTNAME }}
+          LAST_NAME: ${{ secrets.LAST_NAME }}
 
-      # Runs a single command using the runners shell
-      - name: Run this script accessing secrets
-        id: ${{ secrets.FIRST_NAME}}
-        run: echo secrets are added in env 
+   
+    
+      
 
       
