--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,14 +13,9 @@ on:
 jobs:
   deployment:
     runs-on: ubuntu-latest
-    steps:
-         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4   
-      - name: My first action
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FIRSTNAME: ${{ secrets.FIRSTNAME }}
-          LAST_NAME: ${{ secrets.LAST_NAME }}
+    env: 
+      SERVER: dev
+      
 
    
     
