--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,8 +13,15 @@ on:
 jobs:
   deployment:
     runs-on: ubuntu-latest
-    env: 
-      SERVER: dev
+    steps:
+      - name: printing environment
+        env: 
+         MY_VAR: Hi there! My name is
+         FIRST_NAME: chich76
+         MIDDLE_NAME: chinn
+         LAST_NAME: one.verizon.com
+         run: |
+          echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
       
 
    
