--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: printing environment
+        uses: actions/checkout@v4
         env: 
          MY_VAR: Hi there! My name is
          FIRST_NAME: chich76
