--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -17,12 +17,9 @@ jobs:
       - name: printing environment
         uses: actions/checkout@v4
         env: 
-         MY_VAR: Hi there! My name is
-         FIRST_NAME: chich76
-         MIDDLE_NAME: chinn
-         LAST_NAME: one.verizon.com
+         MY_VAR: var123
          run: |
-          echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
+          echo "Hello ${{MY_VAR}}"
       
 
    
