--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -7,7 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
- 
+env: 
+  name:  dev1
 
  # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -16,10 +17,8 @@ jobs:
     steps:
       - name: printing environment
         uses: actions/checkout@v4
-        env: 
-         MY_VAR: var123
-         run: |
-          echo "Hello ${{MY_VAR}}"
+      - run: echo 'Hi ${{ env.name }}'  
+         
       
 
    
