--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,6 +9,7 @@ on:
     branches: [ "main" ]
 env: 
   name:  dev1
+  env_var: ${{ vars.firstname}}   
 
  # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -17,7 +18,7 @@ jobs:
     steps:
       - name: printing environment
         uses: actions/checkout@v4
-      - run: echo 'Hi ${{ env.name }}'  
+      - run: echo 'Hi ${{ vars.env_var }}'  
          
       
 
