--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -16,9 +16,9 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     steps:
-      - name: printing environment
+      - name: printing environment variables
         uses: actions/checkout@v4
-      - run: echo 'Hi ${{ vars.env_var }}'  
+      - run: echo 'Hi ${{ env_var.firstname }}'  
          
       
 
