--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: printing environment variables
         uses: actions/checkout@v4
-      - run: echo 'Hi ${{ env_var.firstname }}'  
+      - run: echo 'Hi ${{ vars.firstname }}'  
          
       
 
