--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,7 +9,7 @@ on:
     branches: [ "main" ]
 env: 
   name:  dev1
-  env_var: ${{ vars.firstname}}   
+  env_var: ${{ vars.FIRSTNAME}}   
 
  # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: printing environment variables
         uses: actions/checkout@v4
-      - run: echo 'Hi ${{ vars.firstname }}'  
+      - run: echo 'Hi ${{ vars.FIRSTNAME }}'  
          
       
 
