--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [ "main" ]
 env: 
-  env_var: ${{ vars.FIRSTNAME}}   
+  env_var: ${{ vars.FIRST_NAME}}   
 
  # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: printing environment variables
         uses: actions/checkout@v4
-      - run: echo 'Hi ${{ vars.env_var }}'  
+      - run: echo 'Hi ${{ vars.FIRST_NAME }}'  
          
       
 
