--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,16 +8,21 @@ on:
   push:
     branches: [ "main" ]
 env: 
-  env_var: ${{ vars.FIRST_NAME}}   
-
- # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  name: mssp-tenant
+  # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  deployment:
+  job1: to access vaiables at job level
     runs-on: ubuntu-latest
-    steps:
-      - name: printing environment variables
-        uses: actions/checkout@v4
-      - run: echo 'Hi ${{ vars.FIRST_NAME }}'  
+    env: cust1-dev1
+    steps: 
+      - run: echo 'Hi ${{ env.name }}'  
+        env: 
+          name: cust2-dev2
+    
+  
+
+      
+         
          
       
 
